[gd_scene load_steps=6 format=2]

[ext_resource path="res://Note.gd" type="Script" id=1]
[ext_resource path="res://Icons/Sharp.png" type="Texture" id=2]
[ext_resource path="res://Icons/Flat.png" type="Texture" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/WholeNote.png-900c6cff06ab3f199ad589e3901df1b4.stex"

[sub_resource type="CapsuleShape2D" id=2]
radius = 76.0
height = 118.0

[node name="Note" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="NoteSound" type="AudioStreamPlayer" parent="."]

[node name="NoteImage" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="SnapToPoint" type="Line2D" parent="NoteImage"]
points = PoolVector2Array( 0, 0 )

[node name="Flat" type="Sprite" parent="NoteImage"]
position = Vector2( -227, -48 )
texture = ExtResource( 3 )

[node name="Sharp" type="Sprite" parent="NoteImage"]
position = Vector2( -262, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="NoteCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ledger_neg1p5" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 249 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_neg1" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 166 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_negp5" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 83 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_0" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_p5" type="Line2D" parent="."]
visible = false
position = Vector2( 0, -83 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_1" type="Line2D" parent="."]
visible = false
position = Vector2( 0, -166 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="Ledger_1p5" type="Line2D" parent="."]
visible = false
position = Vector2( 0, -249 )
points = PoolVector2Array( -180, 0, 180, 0 )
width = 20.0
default_color = Color( 0, 0, 0, 1 )

[node name="HighlightedNote" type="Sprite" parent="."]
visible = false
